--- a/Trade/templates/tradeweb/login.html
+++ b/Trade/templates/tradeweb/login.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Login</h2>
+    <h2>登录</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -11,14 +11,14 @@
     <form action="{% url 'login' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="Username">
+            <input autofocus class="form-control" type="text" name="username" placeholder="手机号">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="密码">
         </div>
-        <input class="btn btn-primary" type="submit" value="Login">
+        <input class="btn btn-primary" type="submit" value="登录">
     </form>
 
-    Don't have an account? <a href="{% url 'register' %}">Register here.</a>
+    没有账号？ <a href="{% url 'register' %}">注册一个.</a>
 
 {% endblock %}
