--- a/Trade/templates/tradeweb/register.html
+++ b/Trade/templates/tradeweb/register.html
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-    <h2>Register</h2>
+    <h2>注册</h2>
 
     {% if message %}
         <div>{{ message }}</div>
@@ -11,20 +11,20 @@
     <form action="{% url 'register' %}" method="post">
         {% csrf_token %}
         <div class="form-group">
-            <input class="form-control" autofocus type="text" maxlength="11" minlength="11" nonce="请输入合法手机号" name="phoneID" placeholder="手机号">
+            <input class="form-control" autofocus type="text" maxlength="11" minlength="11" oninput="value=value.replace(/[^\d]/g,'')"  name="phoneID" placeholder="手机号">
         </div>
 {#        <div class="form-group">#}
 {#            <input class="form-control" type="email" name="email" placeholder="Email Address">#}
 {#        </div>#}
         <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="Password">
+            <input class="form-control" type="password" name="password" placeholder="密码">
         </div>
         <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="Confirm Password">
+            <input class="form-control" type="password" name="confirmation" placeholder="确认密码">
         </div>
-        <input class="btn btn-primary" type="submit" value="Register">
+        <input class="btn btn-primary" type="submit" value="注册">
     </form>
 
-    Already have an account? <a href="{% url 'login' %}">Log In here.</a>
+    已经有账号？ <a href="{% url 'login' %}">登录</a>。
 
 {% endblock %}
