--- a/Trade/templates/tradeweb/myinfopage.html
+++ b/Trade/templates/tradeweb/myinfopage.html
@@ -1,6 +1,15 @@
 {% extends "tradeweb/layout.html" %}
 {% block body %}
     <div class="container-fluid">
-        <div></div>
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-center-block">
+{#                会员名 不可修改#}
+{#                昵称 可修改#}
+{#                邮箱 可修改#}
+
+{#                学生认证的信息 不可修改#}
+
+            </div>
+        </div>
     </div>
 {% endblock %}
