--- a/Trade/templates/tradeweb/index.html
+++ b/Trade/templates/tradeweb/index.html
@@ -2,7 +2,11 @@
 
 {% block body %}
     <div class="container-fluid ">
-        <h2>TODO </h2>
+        <div class="row justify-content-center">
+            <div class="col-md-8 table-bordered">
+
+            </div>
+        </div>
     </div>
 
 {% endblock %}
