--- a/Trade/templates/tradeweb/layout.html
+++ b/Trade/templates/tradeweb/layout.html
@@ -23,7 +23,7 @@
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="font-size: 14px; height: 30px">
-    <span class="navbar-text" href="#">您好，欢迎来到淘淘大学生二手交易平台！</span>
+    <a href="{% url 'index' %}"><span class="navbar-text" >您好，欢迎来到淘淘大学生二手交易平台！</span></a>
     {#  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">#}
     {#    <span class="navbar-toggler-icon"></span>#}
     {#  </button>#}
@@ -46,7 +46,6 @@
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <a class="dropdown-item" href="#">个人主页</a>
                         <a class="dropdown-item" href="#">我的钱包</a>
-                        <a class="dropdown-item" href="{% url 'logout' %}">退出登录</a>
                     </div>
                 </li>
             {% else %}
@@ -59,9 +58,36 @@
             {% endif %}
 
         </ul>
+    {% if user.is_authenticated %}
+        <ul class="nav navbar-nav navbar-right">
+            <li class="nav-item">
+                <a class="nav-link" href="#">购物车</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">我的订单</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">消息<span class="badge badge-danger">3</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    设置
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">个人资料设置</a>
+                    <a class="dropdown-item" href="#">收货地址</a>
+                    <a class="dropdown-item" href="#">注销账号</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">退出登录</a>
+                </div>
+            </li>
+        </ul>
+    {% endif %}
     </div>
 </nav>
+<script>
 
+</script>
 {% block body %}
 {% endblock %}
 </body>
