--- a/Trade/templates/tradeweb/login.html
+++ b/Trade/templates/tradeweb/login.html
@@ -1,24 +1,26 @@
 {% extends "tradeweb/layout.html" %}
 
 {% block body %}
+    <div class="container-fluid ">
+        <div class="row ">
+            <div class="col-md-3 table-bordered offset-8" style="background-color:#e2e6ea;height: 250px;">
+                <div><h2>登录</h2></div>
+                {% if message %}
+                    <div>{{ message }}</div>
+                {% endif %}
+                <form action="{% url 'login' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input autofocus class="form-control" type="text" name="username" placeholder="手机号">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="密码">
+                    </div>
+                    <input class="btn btn-primary" type="submit" value="登录">
+                </form>
 
-    <h2>登录</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'login' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input autofocus class="form-control" type="text" name="username" placeholder="手机号">
+                没有账号？ <a href="{% url 'register' %}">注册一个.</a>
+            </div>
         </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="密码">
-        </div>
-        <input class="btn btn-primary" type="submit" value="登录">
-    </form>
-
-    没有账号？ <a href="{% url 'register' %}">注册一个.</a>
-
+    </div>
 {% endblock %}
