--- a/Trade/templates/tradeweb/register.html
+++ b/Trade/templates/tradeweb/register.html
@@ -1,30 +1,29 @@
 {% extends "tradeweb/layout.html" %}
 
 {% block body %}
-
-    <h2>注册</h2>
-
-    {% if message %}
-        <div>{{ message }}</div>
-    {% endif %}
-
-    <form action="{% url 'register' %}" method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <input class="form-control" autofocus type="text" maxlength="11" minlength="11" oninput="value=value.replace(/[^\d]/g,'')"  name="phoneID" placeholder="手机号">
+    <div class="container-fluid ">
+        <div class="row">
+            <div class="col-md-3 table-bordered offset-8" style="background-color:#e2e6ea;height: 300px;">
+                <div><h2>注册</h2></div>
+                {% if message %}
+                    <div>{{ message }}</div>
+                {% endif %}
+                <form action="{% url 'register' %}" method="post">
+                    {% csrf_token %}
+                    <div class="form-group">
+                        <input class="form-control" autofocus type="text" maxlength="11" minlength="11"
+                               oninput="value=value.replace(/[^\d]/g,'')" name="phoneID" placeholder="手机号">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="password" placeholder="密码">
+                    </div>
+                    <div class="form-group">
+                        <input class="form-control" type="password" name="confirmation" placeholder="确认密码">
+                    </div>
+                    <input class="btn btn-primary" type="submit" value="注册">
+                </form>
+                已经有账号？ <a href="{% url 'login' %}">登录</a>。
+            </div>
         </div>
-{#        <div class="form-group">#}
-{#            <input class="form-control" type="email" name="email" placeholder="Email Address">#}
-{#        </div>#}
-        <div class="form-group">
-            <input class="form-control" type="password" name="password" placeholder="密码">
-        </div>
-        <div class="form-group">
-            <input class="form-control" type="password" name="confirmation" placeholder="确认密码">
-        </div>
-        <input class="btn btn-primary" type="submit" value="注册">
-    </form>
-
-    已经有账号？ <a href="{% url 'login' %}">登录</a>。
-
+    </div>
 {% endblock %}
