--- a/Trade/templates/tradeweb/register.html
+++ b/Trade/templates/tradeweb/register.html
@@ -1,9 +1,9 @@
 {% extends "tradeweb/layout.html" %}
 
 {% block body %}
-    <div class="container-fluid ">
+    <div class="container-fluid "style="padding-top:30px;">
         <div class="row">
-            <div class="col-md-3 table-bordered offset-8" style="background-color:#e2e6ea;height: 300px;">
+            <div class="col-md-3 table-bordered offset-8" style=" padding-top:10px;background-color:#e2e6ea;height: 300px;">
                 <div><h2>注册</h2></div>
                 {% if message %}
                     <div>{{ message }}</div>
