--- a/Trade/templates/tradeweb/layout.html
+++ b/Trade/templates/tradeweb/layout.html
@@ -7,27 +7,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" href="{% static "css/bootstrap.min.css" %}">
+    <link rel="stylesheet" href="{% static "global.css" %}">
     <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.6.0/jquery.js"></script>
     <script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
-    <style>
-        .col-center-block {
-            position: absolute;
-            top: 50%;
-            -webkit-transform: translateY(-50%);
-            -moz-transform: translateY(-50%);
-            -ms-transform: translateY(-50%);
-            -o-transform: translateY(-50%);
-            transform: translateY(-50%);
-        }
-    </style>
+
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-transparent" style="font-size: 14px; height: 30px">
+<nav class="navbar navbar-expand-lg navbar-light bg-transparent" >
     <a href="{% url 'index' %}"><span class="navbar-text" >您好，欢迎来到淘淘大学生二手交易平台！</span></a>
     {#  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">#}
     {#    <span class="navbar-toggler-icon"></span>#}
     {#  </button>#}
-    <div class="collapse navbar-collapse">
+    <div class="collapse navbar-collapse justify-content-md-center">
         <ul class="navbar-nav">
             {% if user.is_authenticated %}
                 <li class="nav-item">
@@ -55,6 +46,47 @@
                 <li class="nav-item">
                     <a class="nav-link" href="{% url 'register' %}">[免费注册]</a>
                 </li>
+                <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">购物车</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">我的订单</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'login' %}">消息<span class="badge badge-danger">3</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'login' %}" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    卖家中心
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{% url 'login' %}">我卖出的商品</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">正在出售的宝贝</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'login' %}" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    联系客服
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{% url 'login' %}">消费者客服</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">卖家客服</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="{% url 'login' %}" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    设置
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="{% url 'login' %}">个人资料设置</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">收货地址</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">注销账号</a>
+                    <a class="dropdown-item" href="{% url 'logout' %}">退出登录</a>
+                </div>
+            </li>
             {% endif %}
 
         </ul>
@@ -68,6 +100,26 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#">消息<span class="badge badge-danger">3</span></a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    卖家中心
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">我卖出的商品</a>
+                    <a class="dropdown-item" href="#">正在出售的宝贝</a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
+                   role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    联系客服
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">消费者客服</a>
+                    <a class="dropdown-item" href="#">卖家客服</a>
+                </div>
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink"
