--- a/Trade/templates/tradeweb/layout.html
+++ b/Trade/templates/tradeweb/layout.html
@@ -61,8 +61,8 @@
                     卖家中心
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="{% url 'login' %}">我卖出的商品</a>
-                    <a class="dropdown-item" href="{% url 'login' %}">正在出售的宝贝</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">发布的商品</a>
+                    <a class="dropdown-item" href="{% url 'login' %}">已卖出的商品</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
@@ -107,8 +107,8 @@
                     卖家中心
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">我卖出的商品</a>
-                    <a class="dropdown-item" href="#">正在出售的宝贝</a>
+                    <a class="dropdown-item" href="{% url 'release' user.phoneID %}">发布的商品</a>
+                    <a class="dropdown-item" href="#">已卖出的商品</a>
                 </div>
             </li>
             <li class="nav-item dropdown">
