--- a/Trade/tradeweb/static/global.css
+++ b/Trade/tradeweb/static/global.css
@@ -1,7 +1,8 @@
 body {
-    font: 12px/1.5 tahoma,arial,'Microsoft YaHei UI',\5b8b\4f53,sans-serif;
+    font: 12px/1.5 tahoma, arial, 'Microsoft YaHei UI', \5b8b\4f53, sans-serif;
 
 }
+
 .col-center-block {
     position: absolute;
     top: 50%;
@@ -17,11 +18,12 @@ div {
     display: block;
 }
 
-.logo{
+.logo {
     width: 300px;
     height: 105px;
     padding-right: 20px;
 }
+
 .pc_search {
     background: #fff;
     padding: 22px 0 23px;
@@ -66,7 +68,7 @@ div {
     position: absolute;
     top: -3px;
     right: 0;
-     background: #f03726;
+    background: #f03726;
     color: #f5f5f2;
     font-size: 18px;
 }
@@ -80,7 +82,35 @@ div {
     outline: 0;
 
 }
-.search-links a{
+
+.search-links a {
     float: left;
     margin-right: 20px;
 }
+
+a:hover {
+    text-decoration: none;
+}
+
+.list > a {
+    color: #888888;
+    display: inline-block;
+    width: 234px;
+    height: 366px;
+    box-sizing: border-box;
+    padding: 22px 20px 20px;
+    background: #fff;
+    position: relative;
+
+}
+
+
+.list > a:hover {
+    color: #888888;
+    text-decoration: none;
+    border-color: #761c19;
+    border-width: 1px;
+    border-style: solid;
+}
+
+
