--- a/Trade/templates/tradeweb/details.html
+++ b/Trade/templates/tradeweb/details.html
@@ -48,7 +48,7 @@
                                     <button id="wants" class="badge badge-danger">添加购物车</button>
                                 </span>
                                 <span>
-                                    <button class="badge badge-primary">联系卖家</button>
+                                    <a class="badge badge-primary" href="{% url 'message' %}" >联系卖家</a>
                                 </span>
                             </div>
                             <div>
